--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body {
       text-align: center;
       font-family: Arial;
-      background-color: #f0f0f0;
+      background-color: peachpuff;
       margin-top: 50px;
     }
     input {
